--- a/index.html
+++ b/index.html
@@ -5,49 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Lasagne med linser</title>
+    <title>Recipe Template</title>
   </head>
   <body>
     <header>
-      <h1>Lasagne med linser</h1>
+      <h1>Recipe Template</h1>
     </header>
     <main>
-      <div class="section1">
-        <article>
-          <h2>Det her er starten på opskriften</h2>
-          <p>Nam hvor det smager godt</p>
-          <h3>Ingredienser</h3>
-          <ul>
-            <li>200g røde linser</li>
-            <li>XX-XX antal lasagneplader</li>
-            <li>1,5 løg</li>
-            <li>4 bladselleristave</li>
-            <li>2 store gulerødder</li>
-            <li>1 dåse hakket tomater eller lign.</li>
-          </ul>
-        </article>
-        <article>
-          <h3>Fremgangsmetode</h3>
-          <ol>
-            <li>
-              Gå igang med at undersøge om lalalala o det vil skallere hallo
-              hdodo
-            </li>
-            <li>Davs2</li>
-          </ol>
-        </article>
-      </div>
-      <div class="section2">
-        <aside>
-          <img src="img\bruh.jpg" />
-        </aside>
-        <article>
-          <p>bla</p>
-        </article>
-      </div>
+      <article id="article1">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>100g of template stuff</li>
+          <li>100g of template stuff</li>
+          <li>100g of template stuff</li>
+          <li>100g of template stuff</li>
+          <li>100g of template stuff</li>
+        </ul>
+      </article>
+      <article id="article2">
+        <h2>Process</h2>
+        <p>
+          First you have to do this. But after a while, you have to do this
+          other thing. Then when you are done with that, do this third thing
+        </p>
+        <p>
+          So after that's done, it is pretty much smooth sailing from there. I
+          am not sure exactly what smooth sailing has to do with cooking but I
+          am really just trying to fill this recipe out.
+        </p>
+        <p>
+          The main reason I am not doing an actual recipe is because it doesn't
+          really matter does it? This is just an check to see if we
+        </p>
+        <p>
+          There we go, we have finished our recipe template. Enjoy it with some
+          lorem ipsum dip and have a good day :).
+        </p>
+      </article>
+      <aside id="picture">
+        <img src="img\bruh.jpg" />
+      </aside>
+      <article id="article3">
+        <h2>Symmetry is nice</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum
+        </p>
+      </article>
     </main>
     <footer>
-      <h1>Det var vidst det</h1>
+      <h1>That's all folks</h1>
     </footer>
   </body>
 </html>
