--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
       </article>
       <aside id="picture">
-        <img src="img\bruh.jpg" />
+        <img src="img\template.png" />
       </aside>
       <article id="article3">
         <h2>Symmetry is nice</h2>
